testsuite/tests/properties/invalid_dyn_env/assoc_resolver_bad_args.lkt
import common

class Example: FooNode {
    @lazy args_env: LexicalEnv[FooNode] =
        dynamic_lexical_env(
            Example.assocs_getter,
            assoc_resolver=Example.assoc_resolver
        )

    fun assocs_getter(): Array[InnerEnvAssoc] = null[Array[InnerEnvAssoc]]

    fun assoc_resolver(@ignored a: Bool): Entity[FooNode] =
        null[Entity[FooNode]]
}
